<resources>
    <string name="app_name">PexelsApp</string>
    <string name="home_menu">Home</string>
    <string name="bookmark_menu">Bookmark</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ice">Ice</string>
    <string name="name_surname">Name Surname</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="try_again">Try Again</string>
    <string name="you_haven_t_saved_anything_yet">You haven\'t saved anything yet</string>
    <string name="explore">Explore</string>
    <string name="no_results_found">No results found</string>
    <string name="image_not_found">Image not found</string>
</resources>