<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginStart="@dimen/fragment_end_start_margin"
    android:layout_marginEnd="@dimen/fragment_end_start_margin"
    tools:context=".presentation.fragments.BookmarksFragment">

    <TextView
        android:id="@+id/bookmarkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/bookmarks"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookmarkRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/bookmark_rec_view_top_margin"
        android:layout_marginEnd="@dimen/rec_view_end_margin"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookmarkTextView"
        app:spanCount="2"
        tools:listitem="@layout/image_bookmark_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/anythingHaventSaved"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/bookmarkTextView">

        <TextView
            android:id="@+id/haventSavedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_haven_t_saved_anything_yet"
            android:textSize="14sp"
            android:fontFamily="@font/mulish_regular"
            android:textColor="@color/text_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exploreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:layout_marginTop="@dimen/explore_button_top_margin"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/mulish_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/haventSavedTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>